-
Type:
Bug
-
Status: Closed
-
Priority:
Trivial
-
Resolution: Fixed
-
Affects Version/s: None
-
Fix Version/s: 0.9.2
-
Component/s: Node.js - Library
-
Labels:
-
Patch Info:Patch Available
exports.Connection is a function of two arguments: stream and options. Options is an optional argument, but the function fails if it is omitted. This behavior (function failing) is a bug.
- is duplicated by
-
THRIFT-2168 Node.js appears broken (at least, examples don't work as intended)
-
- Closed
-