THRIFT-2167 nodejs lib throws error if options argument isn't passed Client: nodejs Patch: Randy Abernethy and Red Daly

also add examples to test makefile